--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ install:
 - go get golang.org/x/tools/cmd/cover
 - go get github.com/mattn/goveralls
 script:
-- $HOME/gopath/bin/goveralls -service=travis-ci -repotoken=$COVERALLS_TOKEN
+- go test -v -covermode=count -coverprofile=coverage.out
+- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken=$COVERALLS_TOKEN
 
 env:
   global:
