code coverage fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,17 @@ jobs:
     - name: Static Check
       run: staticcheck ./...
 
+  coverage:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21.x'
+
     - name: Run coverage
       run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
